Wed Jan 11 21:19:21 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/Functor.{h inl}: Remove the ACE_* type specializations and
          add specializations for ACE_Hash for [unsigned] short,
          [unsigned] int, [unsigned] long, [unsigned] long long. This
          should resolve the compile errors on some platforms resulting
          from the changes in:
          Tue Jan 10 23:04:06 UTC 2006  Steve Huston  <shuston@riverace.com>
          and still allow everything to work regardless of what integral types
          are used.

Wed Jan 11 11:43:42 2006  Ossama Othman <ossama@dre.vanderbilt.edu>

        From Richard Ward <richard_ward at symantec dot com>
        * ace/Auto_Ptr.h (ACE_AUTO_PTR_RESET):

          Assign "NEWPTR" macro argument to a temporary "TYPE" pointer,
          and use that pointer in place of "NEWPTR" to force "NEWPTR" to
          be expanded only once.  Prevents a memory leak from occuring
          when "NEWPTR" is an expression such as "new foo".

          Delete the object released from the auto_ptr<>.  Previously it
          was ignored, resulting in a memory leak.  Fixes a memory leak.

        * THANKS:

          Added Richard to the Hall of Fame.

Wed Jan 11 18:58:15 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Assert.cpp:
        * ace/Assert.h:

          Added const qualifier to __ace_assert() "expression" parameter.

Wed Jan 11 17:36:44 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Assert.h:

          Use ACE_VERSIONED_NAMESPACE_NAME prefix for __ace_assert()
          invocation.

Wed Jan 11 14:24:20 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * Makefile.am:

          Updated.

        * ace/ace.mpc:
        * ace/ace_for_tao.mpc:

          Added Assert.cpp to Source_Files section.

        * ace/Global_Macros.h:

          Changed to #include "ace/Assert.h", as the ACE_FACTORY_DEFINE
          macro uses ACE_ASSERT.

        * ace/Log_Msg.h:
